--- a/loginservlet/src/main/webapp/WEB-INF/web.xml
+++ b/loginservlet/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,46 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+    <filter>
+        <filter-name>AuthFilter</filter-name>
+        <filter-class>servlets.AuthFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthFilter</filter-name>
+        <url-pattern>/login</url-pattern>
+    </filter-mapping>
+    <servlet>
+        <servlet-name>welcome</servlet-name>
+        <servlet-class>servlets.WelcomeServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>servlets.LoginServlet</servlet-class>
+        <!-- here we configure the init parameter which are accessible in ServletConfig object -->
+        <init-param>
+            <param-name>email</param-name>
+            <param-value>admin</param-value>
+        </init-param>
+        <init-param>
+            <param-name>password</param-name>
+            <param-value>1234</param-value>
+        </init-param>
+    </servlet>
+    <servlet>
+        <servlet-name>student</servlet-name>
+        <servlet-class>servlets.StudentServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>student</servlet-name>
+        <url-pattern>/student</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>welcome</servlet-name>
+        <url-pattern>/welcome</url-pattern>
+    </servlet-mapping>
+
 </web-app>
