--- a/jstlexample/pom.xml
+++ b/jstlexample/pom.xml
@@ -14,7 +14,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>jakarta.servlet</groupId>
+          <artifactId>jakarta.servlet-api</artifactId>
+          <version>6.0.0</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
+
   <build>
     <finalName>jstlexample</finalName>
   </build>
