--- a/paymentservice/src/main/resources/application.properties
+++ b/paymentservice/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=paymentservice
+
+
+spring.datasource.url = jdbc:mysql://localhost:3306/paymentservice_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
