--- a/paymentservice/pom.xml
+++ b/paymentservice/pom.xml
@@ -62,11 +62,12 @@
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>3.0.0</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.13</version>
         </dependency>
-	</dependencies>
+
+    </dependencies>
 
 	<build>
 		<plugins>
