--- a/paymentservice/src/main/resources/application.properties
+++ b/paymentservice/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
