--- a/changeproperties/src/main/resources/application.properties
+++ b/changeproperties/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.application.name=changeproperties
 
+info.application.name=Change Service
+info.application.version=1.2.3
+info.application.description=Spring Boot application
 
 server.port=8081
 
-management.endpoints.web.exposure.include=refresh
-
+management.endpoints.web.exposure.include=*
 
 #to make the spring boot as simple java project(disable tomcat)
 #spring.main.web-application-type=none
+
+
+#logging.level.com.example.changeproperties.controller.WelcomeController=DEBUG
+
+
+app.message = "welcome roahn"
