--- a/inventory_system/pom.xml
+++ b/inventory_system/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>7.1.4.Final</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.2.0</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
